Update UI based on validation of text fields

--- a/LoginExample/Auth/Base.lproj/Auth.storyboard
+++ b/LoginExample/Auth/Base.lproj/Auth.storyboard
@@ -26,6 +26,9 @@
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <action selector="usernameDidChange" destination="4Pm-tQ-EUl" eventType="editingChanged" id="Jqu-7Q-DBi"/>
+                                        </connections>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2gS-GW-D6A">
                                         <rect key="frame" x="0.0" y="85" width="200" height="30"/>
