--- a/LoginExample/Auth/Base.lproj/Auth.storyboard
+++ b/LoginExample/Auth/Base.lproj/Auth.storyboard
@@ -19,19 +19,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="55" translatesAutoresizingMaskIntoConstraints="NO" id="QA6-b6-GVK">
-                                <rect key="frame" x="107" y="348" width="200" height="200"/>
+                                <rect key="frame" x="107" y="335.5" width="200" height="225.5"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ain-AX-NAQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
-                                        <nil key="textColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                        <connections>
-                                            <action selector="usernameDidChange" destination="4Pm-tQ-EUl" eventType="editingChanged" id="Jqu-7Q-DBi"/>
-                                        </connections>
-                                    </textField>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="tNl-vh-hcr">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="55.5"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ain-AX-NAQ">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                                <connections>
+                                                    <action selector="usernameDidChange" destination="4Pm-tQ-EUl" eventType="editingChanged" id="Jqu-7Q-DBi"/>
+                                                </connections>
+                                            </textField>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="JV8-VX-g4R">
+                                                <rect key="frame" x="0.0" y="35" width="200" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="1" green="0.15772047280000001" blue="0.13098278999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2gS-GW-D6A">
-                                        <rect key="frame" x="0.0" y="85" width="200" height="30"/>
+                                        <rect key="frame" x="0.0" y="110.5" width="200" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -40,7 +51,7 @@
                                         </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kQT-Pt-g6p">
-                                        <rect key="frame" x="0.0" y="170" width="200" height="30"/>
+                                        <rect key="frame" x="0.0" y="195.5" width="200" height="30"/>
                                         <state key="normal" title="Login"/>
                                         <connections>
                                             <action selector="loginButtonTapped" destination="4Pm-tQ-EUl" eventType="touchUpInside" id="UDm-Vf-vuB"/>
@@ -62,12 +73,13 @@
                     <connections>
                         <outlet property="loginButton" destination="kQT-Pt-g6p" id="1BF-AC-uBu"/>
                         <outlet property="passwordField" destination="2gS-GW-D6A" id="4ge-lS-5c6"/>
+                        <outlet property="usernameError" destination="JV8-VX-g4R" id="xIw-iA-a9o"/>
                         <outlet property="usernameField" destination="Ain-AX-NAQ" id="ZEb-nM-OVv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="C1n-22-TUl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="917" y="646"/>
+            <point key="canvasLocation" x="1474" y="138"/>
         </scene>
         <!--Landing View Controller-->
         <scene sceneID="tne-QT-ifu">
